@@ -42,3 +42,5 @@
 {{ARTICLEPAGENAME}}
 
 {{ARTICLEPAGENAMEE}}
+
+{{DISPLAYTITLE:Magic_Words1}}
