@@ -2,3 +2,5 @@
 {{SERVER}}
 
 {{SERVERNAME}}
+
+{{DISPLAYTITLE:Invalid}}
